<resources>
    <string name="app_name">Super Herois</string>

    <string name="lblID">Digite o ID do personagem: </string>
    <string name="lblName">Codnome: Não encontrado</string>
    <string name="lblFull">Nome Real: Não encontrado</string>
    <string name="lblCityNasc">Local de Nascimento: Não encontrado</string>
    <string name="lblInfo">Informações do Heroi</string>
    <string name="lblDesejo">Clique no botão a baixo para ver a lista de personagens</string>
    <string name="lblLong">Longitude: </string>
    <string name="lblLat">Latitude: </string>
    <string name="lblinforma"></string>
    <string name="lblHName">Nome Real: </string>
    <string name="lblHCod">Codnome: </string>
    <string name="lblHCity">Local de Nascimento: </string>
    <string name="lblArquivo">Digite o nome do Arquivo: </string>
    <string name="lblSelect">Escolha onde quer salvar o arquivo: </string>
    <string name="lblTitle">Herois Salvos</string>
    <string name="lblSemRegistros">Não há nenhum registro de heroi salvo!</string>
    <string name="lblRegistro">Registro do Heroi</string>
    <string name="lblNome">Nome:</string>
    <string name="lblCodnome">Codinome:</string>
    <string name="lblCidade">Cidade de Nascimento:</string>

    <string name="txtID">De 1 a 732 </string>

    <string name="btnPesq">Pesquisar</string>
    <string name="btnVoltar">Voltar</string>
    <string name="lblPesqId">Ver Lista</string>
    <string name="btnHeroAPI">Pesquisar Herois</string>
    <string name="btnGeo">Verificar Localização</string>
    <string name="btnLocaliza">Monitorar Localização</string>
    <string name="btnVer">Ver minhas cordenadas</string>
    <string name="btnMaps">Ver no mapa</string>
    <string name="btnSalvar">Salvar coordenadas</string>
    <string name="btnRecuperar">Recuperar Coordenada anterior</string>
    <string name="btnRegistro">Registrar Heroi</string>
    <string name="btnEscolha">Escolha de Salvamento</string>
    <string name="btnInterno">Memoria do Aplicativo</string>
    <string name="btnExterno">Memoria do Aparelho</string>
    <string name="btnSalvarDados">Salvar Dados</string>
    <string name="btnSalvos">Herois Registrados</string>
    <string name="btnDelete">Apagar Registro</string>
    <string name="btnDeleteAll">Apagar Todos</string>

    <string name="delete_ok">Exclusão efetuada com successo"</string>
    <string name="deleteHeroi">Confirma a exclusão?</string>
    <string name="deleteAll">Confirma a exclusão de todos os registros?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string name="large_text"></string>
    <string name="action_settings">Excluir</string>
</resources>