<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecebeDados">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblInfo"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@color/colorInfo"
            android:text="@string/lblInfo"
            android:textAlignment="center"
            android:textColor="@color/colorFonte"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/lblFull"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/lblFull" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/lblName" />

        <TextView
            android:id="@+id/lblCityNasc"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/lblCityNasc" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="VoltarOnClick"
            android:text="@string/btnVoltar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>