<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalEncontrado">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="67dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLat" />

        <TextView
            android:id="@+id/lblLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLong" />

        <Button
            android:id="@+id/btnMaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="MapaOnClick"
            android:text="@string/btnMaps" />

        <Button
            android:id="@+id/btnVoltar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="VoltarOnClick"
            android:text="@string/btnVoltar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>