<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeoLocation">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblinforma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lblinforma"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnLocaliza"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="LocalizaOnClick"
            android:text="@string/btnLocaliza" />

        <Button
            android:id="@+id/btnVer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="VerOnClick"
            android:text="@string/btnVer" />

        <Button
            android:id="@+id/btnVoltar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="VoltarOnClick"
            android:text="@string/btnVoltar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>