<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostraHeroi">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTitle"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/lblSemRegistros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblSemRegistros"
            android:textSize="30sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/lvListaHiro"
            android:layout_width="match_parent"
            android:layout_height="454dp" />

        <Button
            android:id="@+id/btnVoltar7"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:onClick="VoltarOnClick"
            android:text="@string/btnVoltar" />

        <Button
            android:id="@+id/btnApagarAll"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:onClick="DeleteAllOnClick"
            android:text="@string/btnDeleteAll" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>