<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoHiro">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblRegistro"
            android:textAlignment="center"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblNome"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNome" />

            <EditText
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCodnome"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCodnome" />

            <EditText
                android:id="@+id/txtCodinome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCidade"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCidade" />

            <EditText
                android:id="@+id/txtCidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="DeleteOnClick"
            android:text="@string/btnDelete" />

        <Button
            android:id="@+id/btnVoltar6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="VoltarOnClick"
            android:text="@string/btnVoltar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>